Add custom models with meshes (plates and shelf) and update world configuration

--- a/src/pick_place_arm/CMakeLists.txt
+++ b/src/pick_place_arm/CMakeLists.txt
@@ -25,7 +25,7 @@ endif()
 
 # Install Directories
 install(
-  DIRECTORY launch meshes urdf config worlds
+  DIRECTORY launch meshes urdf config worlds models
   DESTINATION share/${PROJECT_NAME}
 )
 
