feat: Integrate attachment logic into demo script (2-terminal workflow)
Major milestone: Simplified workflow from 3 terminals to 2!

Changes:
- Integrated gripper attachment logic directly into demo_pick_place.py
- Added background executor thread to process callbacks during demo
- Created initial_detach.py script that runs automatically from launch file
- Enhanced gripper_attachment_node.py with state machine and diagnostics
- Added gripper_params.yaml for easy configuration
- Updated README with 2-terminal workflow

Features:
- Silent initial detach (runs from launch file in background)
- Real-time stall detection and attachment
- Automatic detachment on gripper open
- Clean, emoji-enhanced logging
- State machine: OPEN → GRASPING → ATTACHED → OPEN

Workflow:
  Terminal 1: ros2 launch arm_moveit_config unified_gz_moveit.launch.py
  Terminal 2: python3 install/pick_place_arm/lib/pick_place_arm/demo_pick_place.py

Result: Fully automated pick-and-place with dynamic attachment!

--- a/src/pick_place_arm/CMakeLists.txt
+++ b/src/pick_place_arm/CMakeLists.txt
@@ -36,6 +36,7 @@ install(
     scripts/wait_and_spawn_controllers.py
     scripts/controller_starter.py
     scripts/contact_monitor.py
+    scripts/initial_detach.py
   DESTINATION share/${PROJECT_NAME}/scripts
 )
 
