feat: Hardcoded pick-and-place system with recorded positions
- Implemented hardcoded pick positions from SRDF
- Added manual control and visualization script
- Created pick_and_place_demo.py with 4 menu options
- Fixed red box attachment bug in contact detection
- Added RViz visualization with basket meshes
- Recorded 3 working pick-and-place positions (RGB to matching baskets)
- Updated world file with repositioned baskets
- Disabled auto-attach in vision script to prevent conflicts

Working demo: Red, Green, Blue boxes to matching colored baskets

--- a/src/pick_place_arm/CMakeLists.txt
+++ b/src/pick_place_arm/CMakeLists.txt
@@ -49,6 +49,12 @@ install(
     scripts/pick_and_place_cartesian.py
     scripts/demo_pick_place.py
     scripts/gripper_attachment_node.py
+    scripts/vision_pick_place_node.py
+    scripts/vision_interactive_demo.py
+    scripts/camera_calibration.py
+    scripts/vision_utils.py
+    scripts/object_detector.py
+    scripts/ik_utils.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
